Working on IE7/6 formatting issues introduced with adding Location info to single/multiple pages.
Fixed IE7 issues, now need to fix IE6.

git-svn-id: file:///Users/michael/repos-aroundtheworld/trunk@100 f54931ca-e29a-4586-8446-2c8b6a4cd0ca

--- a/wp-content/themes/480days/style-ie.css
+++ b/wp-content/themes/480days/style-ie.css
@@ -1,9 +1,5 @@
 /* ----------------------------------------- # CONTENT  */
 
-.day-number
-	{
-	}	
-
 #ie-day-number-fix
 	{
 	margin-top: -4px;
@@ -50,6 +46,8 @@
 	}
 
 
+/* fixes needed after adding location 
+	to post and category pages */
 
 #content-single
 	{
@@ -89,6 +87,13 @@
 	margin-top: 30px;
 	}	
 	
+#content-multiple .day-number
+	{
+	margin-top: -5px;
+	}	
+	
+
+
 	
 
 /* ----------------------------------------- # NAVIGATION  */
